adding profile picture to the user
